--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,14 @@ test {
 }
 
 dependencies {
+    implementation 'no.tornado:tornadofx:1.7.17'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation(
             'org.assertj:assertj-core:3.12.2',
             'org.junit.jupiter:junit-jupiter-api:5.4.2'
     )
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+
 
 }
 
