--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ test {
 
 dependencies {
     implementation 'no.tornado:tornadofx:1.7.17'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation(
             'org.assertj:assertj-core:3.12.2',
