--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation(
             'org.assertj:assertj-core:3.12.2',
             'org.junit.jupiter:junit-jupiter-api:5.4.2'
